--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/src/css/normalize.css">
     <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>MyProjects</title>
 </head>
 <body>
+
 https://milanick.github.io/
 </body>
 </html>
