added a non-floating transition along the anchor

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>MyProjects</title>
 </head>
 <body>
+<div class="container">
+    <div class="header">
+    <div class="switch">
+        <div class="switch__btn switch__btn--left"><a href="#slider">слайдер</a></div>
+        <div class="switch__btn switch__btn--right"><a href="#list">список</a></div>
+    </div>
+    </div>
+    <div class="main-slider" id="slider">
 
-https://milanick.github.io/
+        для слайдера
+    </div>
+    <div class="main-list" id="list">для списка</div>
+</div>
+<script src="src/js/script.js"></script>
 </body>
 </html>
