--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container">
     <div class="header">
+        В РАЗРАБОТКЕ!
     <div class="switch">
         <div class="switch__btn switch__btn--left"><a href="#slider">слайдер</a></div>
         <div class="switch__btn switch__btn--right"><a href="#list">список</a></div>
