--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>MyProjects</title>
 </head>
 <body>
@@ -16,17 +16,17 @@
 <!--                <div class="flipswitch-switch"></div>-->
 <!--            </label>-->
 <!--        </div>-->
-        В РАЗРАБОТКЕ!
+
     <div class="switch">
-        <div class="switch__btn switch__btn--left"><a href="#slider">слайдер</a></div>
-        <div class="switch__btn switch__btn--right"><a href="#list">список</a></div>
+        <div anim="ripple" class="switch__btn switch__btn--left switch__btn--slider switch__btn--active">слайдер</div>
+        <div anim="ripple" class="switch__btn switch__btn--right switch__btn--list">список</div>
     </div>
     </div>
-    <div class="main-slider" id="slider">
+    <div class="main-slider screen screen--active">
 
         для слайдера
     </div>
-    <div class="main-list" id="list">для списка</div>
+    <div class="main-list screen"> для списка</div>
 </div>
 <script src="src/js/script.js"></script>
 </body>
