slider is configured, fonts are installed

--- a/index.html
+++ b/index.html
@@ -4,29 +4,36 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="src/style/normalize.css">
     <link rel="stylesheet" href="src/style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,800;0,900;1,100;1,300&display=swap"
+          rel="stylesheet">
     <title>MyProjects</title>
 </head>
 <body>
 <div class="container">
     <div class="header">
-    <div class="switch">
-        <div anim="ripple" class="switch__btn switch__btn--left switch__btn--slider switch__btn--active">слайдер</div>
-        <div anim="ripple" class="switch__btn switch__btn--right switch__btn--list">список</div>
-    </div>
+        <div class="switch">
+            <div class="ripple switch__btn switch__btn--left switch__btn--slider switch__btn--active">СЛАЙДЕР
+            </div>
+            <div class="ripple switch__btn switch__btn--right switch__btn--list">СПИСОК</div>
+        </div>
     </div>
     <div class="main-slider screen screen--active">
-        <div class="slider">
-            <div class="slider__item"><img src="src/pic/001.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/002.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/003.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/004.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/005.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/006.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/007.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/008.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/009.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/010.jpg" alt=""></div>
-            <div class="slider__item"><img src="src/pic/011.jpg" alt=""></div>
+        <div class="wrapper">
+            <div class="slider">
+                <div class="slider__item"><img data-lazy="src/pic/001.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/002.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/003.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/004.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/005.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/006.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/007.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/008.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/009.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/010.jpg" alt=""></div>
+                <div class="slider__item"><img data-lazy="src/pic/011.jpg" alt=""></div>
+            </div>
         </div>
     </div>
     <div class="main-list screen"> для списка</div>
