the portfolio card is marked up

--- a/index.html
+++ b/index.html
@@ -23,17 +23,74 @@
     <div class="main-slider screen screen--active">
         <div class="wrapper">
             <div class="slider">
-                <div class="slider__item"><img data-lazy="src/pic/001.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/002.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/003.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/004.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/005.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/006.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/007.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/008.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/009.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/010.jpg" alt=""></div>
-                <div class="slider__item"><img data-lazy="src/pic/011.jpg" alt=""></div>
+                <article class="slider__item portfolio column-2">
+                    <h2 class="portfolio__title">Проект "Игры разума"</h2>
+                    <video class="portfolio__video" src=""></video>
+                    <div class="portfolio__context"><p>«Игры разума» — набор из пяти консольных игр. Каждая игра
+                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                        <p>
+                            Это первый проект, реализованный при изучении профессии Javascript-разработчика на
+                            <a href="https://ru.hexlet.io/u/mila" target="_blank">hexlet.io.</a></p>
+                        <p>Работа над проектом началась с настройки среды окружения: установлен node.js, прописаны
+                            зависимости в npm, для чтения пользовательского ввода подключена сторонняя библиотека
+                            readlineSync. Для удобства работы, был использован make. Для автоматического отслеживания
+                            качества кода - настроен линтер (Eslint), для непрерывной интеграции подключен сервис
+                            CodeClimate.</p>
+                        <p>Для удобства был установлен linux, и в работе с терминалом закреплен теоретический материал
+                            по
+                            основам командной строки. Для записи игр в терминале был использован удобный инструмент
+                            asciinema.
+                            Проект также помог разобраться с системой контроля версий, одним из главных инструментов в
+                            арсенале любого разработчика.</p>
+
+
+                </article>
+                <article class="slider__item portfolio column-2">
+                    <h2 class="portfolio__title">Проект "Игры разума"</h2>
+                    <video class="portfolio__video" src=""></video>
+                    <div class="portfolio__context"><p>«Игры разума» — набор из пяти консольных игр. Каждая игра
+                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                        <p>
+                            Это первый проект, реализованный при изучении профессии Javascript-разработчика на
+                            <a href="https://ru.hexlet.io/u/mila" target="_blank">hexlet.io.</a></p>
+                        <p>Работа над проектом началась с настройки среды окружения: установлен node.js, прописаны
+                            зависимости в npm, для чтения пользовательского ввода подключена сторонняя библиотека
+                            readlineSync. Для удобства работы, был использован make. Для автоматического отслеживания
+                            качества кода - настроен линтер (Eslint), для непрерывной интеграции подключен сервис
+                            CodeClimate.</p>
+                        <p>Для удобства был установлен linux, и в работе с терминалом закреплен теоретический материал
+                            по
+                            основам командной строки. Для записи игр в терминале был использован удобный инструмент
+                            asciinema.
+                            Проект также помог разобраться с системой контроля версий, одним из главных инструментов в
+                            арсенале любого разработчика.</p>
+
+
+                </article>
+                <article class="slider__item portfolio column-2">
+                    <h2 class="portfolio__title">Проект "Игры разума"</h2>
+                    <video class="portfolio__video" src=""></video>
+                    <div class="portfolio__context"><p>«Игры разума» — набор из пяти консольных игр. Каждая игра
+                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                        <p>
+                            Это первый проект, реализованный при изучении профессии Javascript-разработчика на
+                            <a href="https://ru.hexlet.io/u/mila" target="_blank">hexlet.io.</a></p>
+                        <p>Работа над проектом началась с настройки среды окружения: установлен node.js, прописаны
+                            зависимости в npm, для чтения пользовательского ввода подключена сторонняя библиотека
+                            readlineSync. Для удобства работы, был использован make. Для автоматического отслеживания
+                            качества кода - настроен линтер (Eslint), для непрерывной интеграции подключен сервис
+                            CodeClimate.</p>
+                        <p>Для удобства был установлен linux, и в работе с терминалом закреплен теоретический материал
+                            по
+                            основам командной строки. Для записи игр в терминале был использован удобный инструмент
+                            asciinema.
+                            Проект также помог разобраться с системой контроля версий, одним из главных инструментов в
+                            арсенале любого разработчика.</p>
+
+
+                </article>
+
+
             </div>
         </div>
     </div>
