--- a/index.html
+++ b/index.html
@@ -27,95 +27,98 @@
                     <div class="inner__slider">
                         <article class="portfolio">
                             <h2 class="portfolio__title">Проект "Игры разума"</h2>
-                            <div class="portfolio__video">
-                                <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg" controls="controls"></video>
-                                <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
-                                    разума» — набор из пяти консольных игр.</a> Каждая игра
-                                    задает вопросы, на которые нужно дать правильные ответы.</p>
-                            </div>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg"
+                                           controls="controls"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
+                                        разума» — набор из пяти консольных игр.</a> Каждая игра
+                                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                                    <p>
+                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
+                                        на hexlet.io
+                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                </div>
 
-                            <div class="portfolio__content">
-                                <p>
-                                    Это первый проект, реализованный при изучении профессии Javascript-разработчика на
-                                    hexlet.io
-                                    <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
-                                <p>Работа над проектом началась с настройки среды окружения: установлен node.js,
-                                    прописаны зависимости в npm, для чтения пользовательского ввода подключена сторонняя
-                                    библиотека readlineSync. Для удобства работы использован make. Для
-                                    автоматического отслеживания качества кода - настроен линтер (Eslint),
-                                    для непрерывной интеграции - подключены сервисы Github Actions и CodeClimate.</p>
-                                <p>В процессе работы над проектом принято решение установить единственной ОС Ubuntu,
-                                    как следствие в работе с терминалом закреплен теоретический материал по основам
-                                    командной строки.
-                                    Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
-                                    Проект также помог разобраться с системой контроля версий, одним из главных
-                                    инструментов в арсенале любого разработчика.</p>
+                                <div class="portfolio__content">
+
+                                    <p>Работа над проектом началась с настройки среды окружения: установлен node.js,
+                                        прописаны зависимости в npm, для чтения пользовательского ввода подключена
+                                        сторонняя
+                                        библиотека readlineSync. Для удобства работы использован make. Для
+                                        автоматического отслеживания качества кода - настроен линтер (Eslint),
+                                        для непрерывной интеграции - подключены сервисы Github Actions и
+                                        CodeClimate.</p>
+                                    <p>В процессе принято решение установить единственной ОС Ubuntu и
+                                        как следствие в работе с терминалом закреплен теоретический материал по основам
+                                        командной строки.
+                                        Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
+                                        Проект также помог разобраться с системой контроля версий, одним из главных
+                                        инструментов в арсенале любого разработчика.</p>
+                                </div>
                             </div>
                         </article>
                     </div>
                 </div>
-
                 <div class="slider__item">
                     <div class="inner__slider">
                         <article class="portfolio">
-                            <h2 class="portfolio__title">Проект "Игры разума"</h2>
-                            <div class="portfolio__video">
-                                <video src="" poster="src/pic/puzzle.jpg" controls="controls"></video>
-                            </div>
-                            <div class="portfolio__content"><p><a
-                                    href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
-                                разума» — набор из пяти консольных игр.</a> Каждая игра
-                                задает вопросы, на которые нужно дать правильные ответы.</p>
-                                <p>
-                                    Это первый проект, реализованный при изучении профессии Javascript-разработчика на
-                                    <a href="https://ru.hexlet.io/u/mila" target="_blank">hexlet.io.</a></p>
-                                <p>Работа над проектом началась с настройки среды окружения: установлен node.js,
-                                    прописаны зависимости в npm, для чтения пользовательского ввода подключена сторонняя
-                                    библиотека readlineSync. Для удобства работы, был использован make. Для
-                                    автоматического
-                                    отслеживания качества кода - настроен линтер (Eslint), для непрерывной интеграции
-                                    подключены сервисы Github Actions и CodeClimate.</p>
-                                <p>Для удобства был установлен linux, и в работе с терминалом закреплен теоретический
-                                    материал по основам командной строки. Для записи игр в терминале был использован
-                                    удобный
-                                    инструмент asciinema.
-                                    Проект также помог разобраться с системой контроля версий, одним из главных
-                                    инструментов в арсенале любого разработчика.</p>
+                            <h2 class="portfolio__title">Вычислитель отличий</h2>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="" poster="src/pic/puzzle.jpg"
+                                           controls="controls"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
+                                        разума» — набор из пяти консольных игр.</a> Каждая игра
+                                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                                    <p>
+                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
+                                        на hexlet.io
+                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                </div>
 
+                                <div class="portfolio__content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum sapiente
+                                        sunt. Ad aliquam aut, dicta dolor dolore earum explicabo id iusto,
+                                    </p>
+                                    <p>necessitatibus nihil nobis placeat quae recusandae rem sapiente sint sit,
+                                        tempore ullam vel voluptatibus! Enim nam pariatur tempore.</p>
+
+                                </div>
                             </div>
                         </article>
                     </div>
                 </div>
-
                 <div class="slider__item">
                     <div class="inner__slider">
                         <article class="portfolio">
-                            <h2 class="portfolio__title">Проект "Игры разума"</h2>
-                            <div class="portfolio__video">
-                                <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg" controls="controls"></video>
-                            </div>
-                            <div class="portfolio__content"><p><a
-                                    href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
-                                разума» — набор из пяти консольных игр.</a> Каждая игра
-                                задает вопросы, на которые нужно дать правильные ответы.</p>
-                                <p>
-                                    Это первый проект, реализованный при изучении профессии Javascript-разработчика на
-                                    <a href="https://ru.hexlet.io/u/mila" target="_blank">hexlet.io.</a></p>
-                                <p>Работа над проектом началась с настройки среды окружения: установлен node.js,
-                                    прописаны зависимости в npm, для чтения пользовательского ввода подключена сторонняя
-                                    библиотека readlineSync. Для удобства был использован make. Для
-                                    автоматического отслеживания качества кода - настроен линтер (Eslint),
-                                    для непрерывной интеграции подключен сервис CodeClimate.</p>
-                                <p>В процессе работы над проектом принято решение установить единственной ОС Ubuntu,
-                                    как следствие в работе с терминалом закреплен теоретический материал по основам
-                                    командной строки.
-                                    Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
-                                    Проект также помог разобраться с системой контроля версий, одним из главных
-                                    инструментов в арсенале любого разработчика.</p>
+                            <h2 class="portfolio__title">следующий проект</h2>
+                            <div class="portfolio__grid">
+                                <div class="portfolio__video">
+                                    <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg"
+                                           controls="controls"></video>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
+                                        разума» — набор из пяти консольных игр.</a> Каждая игра
+                                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                                    <p>
+                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
+                                        на hexlet.io
+                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                </div>
+
+                                <div class="portfolio__content">
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum sapiente
+                                        sunt. Ad aliquam aut, dicta dolor dolore earum explicabo id iusto,
+                                    </p>
+                                    <p>necessitatibus nihil nobis placeat quae recusandae rem sapiente sint sit,
+                                        tempore ullam vel voluptatibus! Enim nam pariatur tempore.</p>
+                                </div>
                             </div>
                         </article>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
