added second project

--- a/index.html
+++ b/index.html
@@ -66,25 +66,20 @@
                             <h2 class="portfolio__title">Вычислитель отличий</h2>
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
-                                    <video src="" poster="src/pic/puzzle.jpg"
+                                    <video src="src/video/2022-01-20_19-14-11.mkv" poster="src/pic/puzzle.jpg"
                                            controls="controls"></video>
-                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
-                                        разума» — набор из пяти консольных игр.</a> Каждая игра
-                                        задает вопросы, на которые нужно дать правильные ответы.</p>
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">«Вычислитель отличий»</a> между двумя файлами в форматах json, yaml.
                                     <p>
-                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
+                                        Это второй проект, реализованный при изучении профессии Javascript-разработчика
                                         на hexlet.io
                                         <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
                                 </div>
 
                                 <div class="portfolio__content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum sapiente
-                                        sunt. Ad aliquam aut, dicta dolor dolore earum explicabo id iusto,
-                                    </p>
-                                    <p>necessitatibus nihil nobis placeat quae recusandae rem sapiente sint sit,
-                                        tempore ullam vel voluptatibus! Enim nam pariatur tempore.</p>
-
-                                </div>
+                                    <p>В проекте реализована работа с деревьями - обход, преобразование, формирование AST (абстрактного синтаксического дерева).
+                                        Проект написан в функциональном стиле. В процессе работы пришло понимание форматов данных json, yaml, ini (структура, изучение синтаксического анализа в js и обратно)</p>
+                                    <p>В результате создано полноценное приложение CLI с анализом входных параметров, проверкой и созданием справки.</p>
+                                 </div>
                             </div>
                         </article>
                     </div>
@@ -92,22 +87,14 @@
                 <div class="slider__item">
                     <div class="inner__slider">
                         <article class="portfolio">
-                            <h2 class="portfolio__title">следующий проект</h2>
+                            <h2 class="portfolio__title">Следующий проект</h2>
                             <div class="portfolio__grid">
                                 <div class="portfolio__video">
-                                    <video src="src/video/2021-11-12_16-50-51.mkv" poster="src/pic/puzzle.jpg"
+                                    <video src="" poster="src/pic/puzzle.jpg"
                                            controls="controls"></video>
-                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">«Игры
-                                        разума» — набор из пяти консольных игр.</a> Каждая игра
-                                        задает вопросы, на которые нужно дать правильные ответы.</p>
-                                    <p>
-                                        Это первый проект, реализованный при изучении профессии Javascript-разработчика
-                                        на hexlet.io
-                                        <a href="https://ru.hexlet.io/u/mila" target="_blank">(мой аккаунт)</a></p>
+                                    <p><a href="" target="_blank"></p>
                                 </div>
-
                                 <div class="portfolio__content">
-
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum sapiente
                                         sunt. Ad aliquam aut, dicta dolor dolore earum explicabo id iusto,
                                     </p>
@@ -127,6 +114,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="src/js/slick.min.js"></script>
 <script src="src/js/script.js"></script>
-<!--<script src="/my.js"></script>-->
 </body>
 </html>
