added a page with a list of projects

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                                 <div class="portfolio__video">
                                     <video src="src/video/2022-01-20_19-14-11.mkv" poster="src/pic/puzzle.jpg"
                                            controls="controls"></video>
-                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">«Вычислитель отличий»</a> между двумя файлами в форматах json, yaml.
+                                    <p><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">«Вычислитель
+                                        отличий»</a> между двумя файлами в форматах json, yaml.
                                     <p>
                                         Это второй проект, реализованный при изучении профессии Javascript-разработчика
                                         на hexlet.io
@@ -76,10 +77,14 @@
                                 </div>
 
                                 <div class="portfolio__content">
-                                    <p>В проекте реализована работа с деревьями - обход, преобразование, формирование AST (абстрактного синтаксического дерева).
-                                        Проект написан в функциональном стиле. В процессе работы пришло понимание форматов данных json, yaml, ini (структура, изучение синтаксического анализа в js и обратно)</p>
-                                    <p>В результате создано полноценное приложение CLI с анализом входных параметров, проверкой и созданием справки.</p>
-                                 </div>
+                                    <p>В проекте реализована работа с деревьями - обход, преобразование, формирование
+                                        AST (абстрактного синтаксического дерева).
+                                        Проект написан в функциональном стиле. В процессе работы пришло понимание
+                                        форматов данных json, yaml, ini (структура, изучение синтаксического анализа в
+                                        js и обратно)</p>
+                                    <p>В результате создано полноценное приложение CLI с анализом входных параметров,
+                                        проверкой и созданием справки.</p>
+                                </div>
                             </div>
                         </article>
                     </div>
@@ -92,7 +97,7 @@
                                 <div class="portfolio__video">
                                     <video src="" poster="src/pic/puzzle.jpg"
                                            controls="controls"></video>
-                                    <p><a href="" target="_blank"></p>
+                                    <p><a href="" target="_blank"></a></p>
                                 </div>
                                 <div class="portfolio__content">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam nostrum sapiente
@@ -109,10 +114,37 @@
             </div>
         </div>
     </div>
-    <div class="main-list screen"> для списка</div>
+    <div class="main-list screen">
+        <div class="list__item">
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl1" target="_blank">Проект "Игры разума"</a></h3>
+            <span class="item__link"> - набор из пяти консольных игр.</span>
+            <p class="item__description">Работа над проектом началась с настройки среды окружения: установлен node.js,
+                прописаны зависимости в npm, для чтения пользовательского ввода подключена
+                сторонняя библиотека readlineSync. Для удобства работы использован make. Для
+                автоматического отслеживания качества кода - настроен линтер (Eslint),
+                для непрерывной интеграции - подключены сервисы Github Actions и
+                CodeClimate.
+                В процессе принято решение установить единственной ОС Ubuntu и
+                как следствие в работе с терминалом закреплен теоретический материал по основам
+                командной строки.
+                Для записи игр в терминале использован удобный опенсорсный инструмент asciinema.
+                Проект также помог разобраться с системой контроля версий, одним из главных
+                инструментов в арсенале любого разработчика.</p>
+        </div>
+        <div class="list__item">
+            <h3 class="item__title"><a href="https://github.com/MilaNick/frontend-project-lvl2" target="_blank">Проект "Вычислитель отличий"</a></h3>
+            <span class="item__link"> между двумя файлами в форматах json, yaml.</span>
+            <p class="item__description">В проекте реализована работа с деревьями - обход, преобразование, формирование
+                AST (абстрактного синтаксического дерева). Проект написан в функциональном стиле. В процессе работы пришло
+                понимание форматов данных json, yaml, ini (структура, изучение синтаксического анализа в js и обратно) В
+                результате создано полноценное приложение CLI с анализом входных параметров, проверкой и созданием
+                справки.</p>
+        </div>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="src/js/slick.min.js"></script>
 <script src="src/js/script.js"></script>
 </body>
 </html>
+
