--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="src/js/slick.min.js"></script>
 <script src="src/js/script.js"></script>
 </body>
 </html>
